--- a/clientes.html
+++ b/clientes.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
   <body onload="cliCads()">
     <header>
@@ -20,17 +20,17 @@
                   <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                       <li class="nav-item active">
-                        <a class="nav-link" href="/index.html">Home <span class="sr-only">(Página atual)</span></a>
+                        <a class="nav-link" href="./index.html">Home <span class="sr-only">(Página atual)</span></a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="/clientes.html">Clientes</a>
+                        <a class="nav-link" href="./clientes.html">Clientes</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="/produtos.html">Produtos</a>
+                        <a class="nav-link" href="./produtos.html">Produtos</a>
                       </li>
-                     <!--  <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Desativado</a>
-                      </li> -->
+                     <li class="nav-item">
+                        <a class="nav-link disabled" href="./pedidos.html">Pedidos</a>
+                      </li>
                     </ul>
                   </div>
                 </nav>
