--- a/index.html
+++ b/index.html
@@ -7,33 +7,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
   <body>
     <header>
         <div class="container-fluid">
-            <nav class="navbar navbar-dark bg-info shadow-sm mt-1">
-                <span class="navbar-brand mb-0 h1">Pedidos Avon</span>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Alterna navegação">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                      <li class="nav-item active">
-                        <a class="nav-link" href="/index.html">Home <span class="sr-only">(Página atual)</span></a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="/clientes.html">Clientes</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="/produtos.html">Produtos</a>
-                      </li>
-                     <!--  <li class="nav-item">
-                        <a class="nav-link disabled" href="/pedidos">Desativado</a>
-                      </li> -->
-                    </ul>
-                  </div>
-                </nav>
+          <nav class="navbar navbar-dark bg-info shadow-sm mt-1">
+            <span class="navbar-brand mb-0 h1">Pedidos Avon</span>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Alterna navegação">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item active">
+                    <a class="nav-link" href="./index.html">Home <span class="sr-only">(Página atual)</span></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./clientes.html">Clientes</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./produtos.html">Produtos</a>
+                  </li>
+                 <li class="nav-item">
+                    <a class="nav-link disabled" href="./pedidos.html">Pedidos</a>
+                  </li>
+                </ul>
+              </div>
+            </nav>
         </div>
     </header>
 
