--- a/produtos.html
+++ b/produtos.html
@@ -12,28 +12,28 @@
   <body onload="prodCads()"> 
     <header>
         <div class="container-fluid">
-               <nav class="navbar navbar-dark bg-info shadow-sm mt-1">
-                <span class="navbar-brand mb-0 h1">Pedidos Avon</span>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Alterna navegação">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                      <li class="nav-item active">
-                        <a class="nav-link" href="/index.html">Home <span class="sr-only">(Página atual)</span></a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="/clientes.html">Clientes</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="/produtos.html">Produtos</a>
-                      </li>
-                     <!--  <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Desativado</a>
-                      </li> -->
-                    </ul>
-                  </div>
-                </nav>
+          <nav class="navbar navbar-dark bg-info shadow-sm mt-1">
+            <span class="navbar-brand mb-0 h1">Pedidos Avon</span>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Alterna navegação">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item active">
+                    <a class="nav-link" href="./index.html">Home <span class="sr-only">(Página atual)</span></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./clientes.html">Clientes</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./produtos.html">Produtos</a>
+                  </li>
+                 <li class="nav-item">
+                    <a class="nav-link disabled" href="./pedidos.html">Pedidos</a>
+                  </li>
+                </ul>
+              </div>
+            </nav>
         </div>
     </header>
 
