--- a/clientes.html
+++ b/clientes.html
@@ -108,7 +108,7 @@
     
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-    <script src="/firebase.js"></script>
-    <script src="/cliente.js"></script>
+    <script src="/js/firebase.js"></script>
+    <script src="/js/cliente.js"></script>
 </body>
 </html>
