--- a/produtos.html
+++ b/produtos.html
@@ -108,7 +108,7 @@
     
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-    <script src="/firebase.js"></script>
-    <script src="/produto.js"></script> 
+    <script src="/js/firebase.js"></script>
+    <script src="/js/produto.js"></script> 
 </body>
 </html>
