--- a/pedidos.html
+++ b/pedidos.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
-  <body onload="prodCads()"> 
+  <body > 
     <header>
         <div class="container-fluid">
           <nav class="navbar navbar-dark bg-info shadow-sm mt-1">
@@ -108,7 +108,7 @@
     
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-    <script src="/js/firebase.js"></script>
-    <script src="/js/produto.js"></script> 
+    <script src="./js/firebase.js"></script>
+    <script src="./js/produto.js"></script> 
 </body>
 </html>
