--- a/clientes.html
+++ b/clientes.html
@@ -29,7 +29,7 @@
                         <a class="nav-link" href="./produtos.html">Produtos</a>
                       </li>
                      <li class="nav-item">
-                        <a class="nav-link disabled" href="./pedidos.html">Pedidos</a>
+                      <a class="nav-link" href="./pedidos.html">Pedidos</a>
                       </li>
                     </ul>
                   </div>
