--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
 </head>
-  <body>
+  <body onload="pedidos()">
     <header>
         <div class="container-fluid">
           <nav class="navbar navbar-dark bg-info shadow-sm mt-1">
@@ -29,7 +29,7 @@
                     <a class="nav-link" href="./produtos.html">Produtos</a>
                   </li>
                  <li class="nav-item">
-                    <a class="nav-link disabled" href="./pedidos.html">Pedidos</a>
+                    <a class="nav-link" href="./pedidos.html">Pedidos</a>
                   </li>
                 </ul>
               </div>
@@ -42,43 +42,41 @@
             <h2>Pedidos</h2>
             <hr>
             <div class="pedidos">
-                <table class="table table-hover">
-                    <thead>
-                      <tr>
-                        <th scope="col">Pedido</th>
-                        <th scope="col">Cliente</th>
-                        <th scope="col">Valor</th>
-                        <th scope="col">Data</th>
-                        <th scope="col">Ação</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <th scope="row">1</th>
-                        <td>Marcelo</td>
-                        <td>R$ 59,99</td>
-                        <td>21/01/2022</td>
-                        <td><button class="btn btn-primary">Ver Pedido</button></td>
-                      </tr>
-                      <tr>
-                        <th scope="row">2</th>
-                        <td>Marcelo</td>
-                        <td>R$ 59,99</td>
-                        <td>21/01/2022</td>
-                        <td><button class="btn btn-primary">Ver Pedido</button></td>
-                      </tr>
-                      <tr>
-                        <th scope="row">3</th>
-                        <td>Marcelo</td>
-                        <td>R$ 59,99</td>
-                        <td>21/01/2022</td>
-                        <td><button class="btn btn-primary">Ver Pedido</button></td>
-                      </tr>
-                    </tbody>
-                  </table>
+              <table class="table table-hover">
+                <thead>
+                  <tr>
+                    <th scope="col">Código</th>
+                    <th scope="col">Data</th>
+                    <th scope="col">Cliente</th>
+                    <th scope="col">Total Pedido</th>
+                    <th scope="col">Ação</th>
+                  </tr>
+                </thead>
+                <tbody id="pedidoCads">
+                 <!-- <tr>
+                    <th scope="row">1</th>
+                    <td>Marcelo</td>
+                    <td>R$ 59,99</td>
+                    <td>21/01/2022</td>
+                    <td><button class="btn btn-danger">Excluir</button></td>
+                  </tr>
+                   <tr>
+                    <th scope="row">2</th>
+                    <td>Marcelo</td>
+                    <td>R$ 59,99</td>
+                    <td>21/01/2022</td>
+                    <td><button class="btn btn-primary">Ver Pedido</button></td>
+                  </tr>
+                  <tr>
+                    <th scope="row">3</th>
+                    <td>Marcelo</td>
+                    <td>R$ 59,99</td>
+                    <td>21/01/2022</td>
+                    <td><button class="btn btn-primary" id="btnProduto">Ver Pedido</button></td>
+                  </tr> -->
+                </tbody>
+              </table>
             </div>
-
-
         </div>
     </main>
 
