alteracao novas funcoes

--- a/clientes.html
+++ b/clientes.html
@@ -44,6 +44,7 @@
             
             <form>
                 <div class="form-group">
+                  <input type="text" name="id" id="id" hidden>
                   <label for="cliente">Cliente</label>
                   <input type="text" class="form-control" id="cliente" placeholder="Nome do Cliente">
                 </div>
