--- a/produtos.html
+++ b/produtos.html
@@ -43,6 +43,7 @@
             <hr>
             <form>
                 <div class="form-group">
+                  <input type="hidden" id="id">
                   <label for="produto">Produto</label>
                   <input type="text" class="form-control" id="produto" placeholder="Nome do Produto">
                 </div>
@@ -64,27 +65,7 @@
             </tr>
           </thead>
           <tbody id="prodCads">
-           <!-- <tr>
-              <th scope="row">1</th>
-              <td>Marcelo</td>
-              <td>R$ 59,99</td>
-              <td>21/01/2022</td>
-              <td><button class="btn btn-danger">Excluir</button></td>
-            </tr>
-             <tr>
-              <th scope="row">2</th>
-              <td>Marcelo</td>
-              <td>R$ 59,99</td>
-              <td>21/01/2022</td>
-              <td><button class="btn btn-primary">Ver Pedido</button></td>
-            </tr>
-            <tr>
-              <th scope="row">3</th>
-              <td>Marcelo</td>
-              <td>R$ 59,99</td>
-              <td>21/01/2022</td>
-              <td><button class="btn btn-primary" id="btnProduto">Ver Pedido</button></td>
-            </tr> -->
+     
           </tbody>
         </table>
       </div>
