--- a/index.html
+++ b/index.html
@@ -39,17 +39,16 @@
 
     <main>
         <div class="container">
-            <h2>Pedidos</h2>
+            <h2>Pedidos Realizados</h2>
             <hr>
             <div class="pedidos">
-              <table class="table table-hover">
+              <table class="table table-info table-hover">
                 <thead>
                   <tr>
                     <th scope="col">Código</th>
                     <th scope="col">Data</th>
                     <th scope="col">Cliente</th>
                     <th scope="col">Total Pedido</th>
-                    <th scope="col">Ação</th>
                   </tr>
                 </thead>
                 <tbody id="pedidoCads">
