--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -49,6 +50,7 @@
                     <th scope="col">Data</th>
                     <th scope="col">Cliente</th>
                     <th scope="col">Total Pedido</th>
+                    <th scope="col">Produtos</th>
                   </tr>
                 </thead>
                 <tbody id="pedidoCads">
@@ -87,6 +89,7 @@
         </div>
     </footer>
 
+    
 
       
     <!-- Optional JavaScript -->
